# bosl

./: .gitignore  Makefile.am  README.md  config.h  configure.ac  todo.md
aux/m4/: flag.m4
bosl-example/: block.bosl  block2.bosl  const-assign.bosl  constant.bosl  fibonacci.bosl  function1.bosl  function2.bosl  function3.bosl  function4.bosl  function5.bosl  if_else.bosl  load-function.bosl  logical.bosl  print.bosl  shift.bosl  simple-expression-negative-unary.bosl  simple-expression.bosl  type.bosl  variable.bosl  while2.bosl  while3.bosl  while4.bosl  while5.bosl  while6.bosl
build-aux/m4/: flag.m4  program.m4
cli/: AUTHORS  Makefile.am  README  config.h  configure.ac  main.c
cli/aux/m4/: readlink.m4
markdown/: grammar.md
tests/: Makefile.am
tests/libbosl/: Makefile.am  error.c  hashmap.c  interpreter.c  lexer.c  list.c  parser.c  vm.c
